test/fixtures/architecture-conformance/negative/cycles/cycle-b.ts
import './cycle-c';

export const cycleB = 'b';